--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       uses: docker/login-action@v2
       with:
             registry: ghcr.io
-            username: ${{ github.DOCKER_LOGIN }}
+            username: ${{ secrets.DOCKER_LOGIN }}
             password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Preset Image Name
