--- a/.github/workflows/build_tar.yml
+++ b/.github/workflows/build_tar.yml
@@ -1,4 +1,4 @@
-name: Build & Deploy
+name: Build Tar And Deploy
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  build-tar-and-deploy:
     runs-on: ubuntu-latest
 
     strategy:
