--- a/.github/workflows/build3.yml
+++ b/.github/workflows/build3.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Deploy Image to CapRrover
         uses: caprover/deploy-from-github@v1.1.2
         with:
-          server: "${{ secrets.CAPROVER_SERVER }}"
+          server: http://c2c-pay.ru
           app: "${{ secrets.APP_NAME }}"
           token: "${{ secrets.APP_TOKEN }}"
           image: ${{ env.IMAGE_URL }}
