--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Deploy on CapRover
         uses: caprover/deploy-from-github@v1.1.2
         with:
-          server: http://c2c-pay.ru
+          server: https://c2c-pay.ru
           app: 'c2cpayru'
           token: '${{ secrets.APP_TOKEN }}'
           image: 'ghcr.io/captainsvelte/c2cpayru:latest'
