--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Deploy Image to CapRrover
       uses: caprover/deploy-from-github@v1.1.2
       with:
-        server: http://c2c-pay.ru
+        server: https://c2c-pay.ru
         app: "${{ secrets.APP_NAME }}"
         token: "${{ secrets.APP_TOKEN }}"
         image: ${{ env.IMAGE_URL }}
