--- a/.github/workflows/deploy_tar.yml
+++ b/.github/workflows/deploy_tar.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Deploy App to CapRover
         uses: caprover/deploy-from-github@v1.0.1
         with:
-          server: http://c2c-pay.ru
+          server: https://c2c-pay.ru
           app: '${{ secrets.APP_NAME }}'
           token: '${{ secrets.APP_TOKEN }}'
