--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,12 @@
 name: build + publish
 
+env:
+    CONTEXT_DIR: './'
+    IMAGE_NAME: ${{ github.repository }}/c2cpayru
+    DOCKERFILE: Dockerfile.staging
+    CAPROVER_APP: c2cpayru
+    DOCKER_REGISTRY: ghcr.io
+
 on:
   push:
     branches:
@@ -10,17 +17,28 @@ jobs:
   build-caprover:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Publish Docker Image
-        uses: matootie/github-docker@v3.1.0
+
+      - uses: actions/checkout@v1
+      - run: |
+            echo "IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME" >> $GITHUB_ENV
+            export IMAGE_NAME_WITH_REGISTRY=$DOCKER_REGISTRY/$IMAGE_NAME
+            echo "FULL_IMAGE_NAME=$IMAGE_NAME_WITH_REGISTRY:$GITHUB_SHA-gitsha" >> $GITHUB_ENV
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          accessToken: ${{ github.token }}
-          containerRegistry: true
+                  registry: ${{ env.DOCKER_REGISTRY }}
+                  username: ${{ github.actor }}
+                  password: ${{ secrets.GITHUB_TOKEN }}
+ 
+      - name: Build and Push Release to DockerHub
+        shell: bash
+        run: ./build_and_push.sh
+
       - name: Deploy on CapRover
         uses: caprover/deploy-from-github@v1.1.2
         with:
           server: https://c2c-pay.ru
-          app: 'c2cpayru'
+          app: ${{ env.CAPROVER_APP }}
           token: '${{ secrets.APP_TOKEN }}'
           image: 'ghcr.io/captainsvelte/c2cpayru:latest'
