--- a/.github/workflows/deploy_tar.yml
+++ b/.github/workflows/deploy_tar.yml
@@ -17,6 +17,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Login to Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GIT_TOKEN }}
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
