--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,9 @@ jobs:
           push: true
           tags: ${{ env.IMAGE_URL }}
 
+      - name: Log in to registry
+        run: echo "${{ secrets.GIT_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+
       - name: Deploy on CapRover
         uses: caprover/deploy-from-github@v1.1.2
         with:
